# chess

./: .clang-format  .clang-tidy  CMakeLists.txt  build.sh
src/: CMakeLists.txt  chess.m.cc  tkchess.m.cc
src/lib/: CMakeLists.txt  board.cc  board.h  board_helper.cc  board_helper.h  board_printer.h  check_helper.cc  check_helper.h  color.h  game.cc  game.h  game_runner.cc  game_runner.h  game_state.cc  game_state.h  human_player.cc  human_player.h  move.h  piece.cc  piece.h  player.cc  player.h  random_player.cc  random_player.h
src/lib/model/: CMakeLists.txt  models.h  player.cc  player.h
src/lib/pieces/: CMakeLists.txt  bishop.cc  bishop.h  diagonal_behavior.cc  diagonal_behavior.h  king.cc  king.h  knight.cc  knight.h  line_behavior.cc  line_behavior.h  pawn.cc  pawn.h  piece_helpers.cc  piece_helpers.h  queen.cc  queen.h  rook.cc  rook.h
src/lib/pieces/tests/: CMakeLists.txt  pawn.t.cc
test/lib/: CMakeLists.txt  check_test.cc  game_state_test.cc
test/lib/pieces/: CMakeLists.txt  bishop_test.cc  mock_piece.h  rook_test.cc
v1/: CMakeLists.txt
v1/src/: CMakeLists.txt  tkchess.m.cc
v1/src/lib/: CMakeLists.txt  board.cc  board.h  board_printer.cc  game.cc  game.h.gch  game_state.cc  game_state.h  human_player.h  piece.cc  piece.h  piece.h.gch  position.h  position.h.gch
v1/src/lib/pieces/: CMakeLists.txt  diagonal_behavior.cc  diagonal_behavior.h  knight.cc  knight.h  pawn.h  queen.cc  rook.h
v1/test/: CMakeLists.txt
v1/test/lib/: CMakeLists.txt  game_state_test.cc
v1/test/lib/pieces/: bishop_test.cc  knight_test.cc  mock_game_state.h  (+1 more)
